--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -102,6 +102,7 @@
     "flow-bin": "0.113.0",
     "flow-typed": "^3.2.0",
     "jest": "^25.1.0",
+    "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^10.0.2",
     "metro-react-native-babel-preset": "^0.58.0",
     "mock-async-storage": "^2.2.0",
@@ -125,7 +126,9 @@
     "transformIgnorePatterns": [
       "node_modules/(?!(react-native|react-navigation|@react-navigation/.*|react-navigation-stack|react-native-screens|@react-native-community/async-storage|react-native-gesture-handler|react-native-popup-menu|react-native-platform-touchable|react-native-linear-gradient|react-native-vector-icons|react-native-spinkit|react-native-status-bar-height|react-native-snap-carousel|react-native-image-picker|react-native-svg|react-native-camera|react-native-image-crop-picker|react-native-keychain)/)"
     ],
-    "testPathIgnorePatterns": ["./e2e/"]
+    "testPathIgnorePatterns": [
+      "./e2e/"
+    ]
   },
   "detox": {
     "configurations": {
