use existing github action to launch emulator

--- a/.github/workflows/detox.yml
+++ b/.github/workflows/detox.yml
@@ -16,6 +16,7 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x]
+        api-level: [29]
 
     steps:
       - uses: actions/checkout@v2
@@ -24,18 +25,6 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Use specific Java version for sdkmanager to work
-        uses: joschi/setup-jdk@v1
-        with:
-          java-version: 'openjdk8'
-          architecture: 'x64'
-
-      - name: Download Android Emulator Image
-        run: |
-          echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install "system-images;android-29;google_apis;x86"
-          echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd --force --name Pixel_2_XL_API_28 --device "Nexus 5X" -k 'system-images;android-29;google_apis;x86'
-          $ANDROID_HOME/emulator/emulator -list-avds
 
       - name: Cache node modules
         id: yarn-cache-debug # needed below to check for cache hit or miss
@@ -53,14 +42,11 @@ jobs:
           mv ./android/app/google-services.json-dev ./android/app/google-services.json
           yarn build:detox:android
 
-      - name: Android Emulator
-        timeout-minutes: 10
-        continue-on-error: true
-        run: |
-          echo "Starting emulator"
-          nohup $ANDROID_HOME/emulator/emulator -avd Pixel_2_XL_API_28 -no-audio -no-snapshot -no-window &
-          $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done; input keyevent 82'
-          $ANDROID_HOME/platform-tools/adb devices
-          echo "Emulator started"
-      - name: Android Detox
-        run: yarn start:detox & yarn test:android -- --headless
+      - name: run detox tests
+        uses: reactivecircus/android-emulator-runner@v2
+          with:
+            api-level: ${{ matrix.api-level }}
+            arch: x86_64
+            profile: Nexus 6
+            avd-name: Pixel_2_XL_API_28
+            script: yarn start:detox & yarn test:android -- --headless
