--- a/.github/workflows/detox.yml
+++ b/.github/workflows/detox.yml
@@ -49,4 +49,4 @@ jobs:
           arch: x86_64
           profile: Nexus 6
           avd-name: Pixel_2_XL_API_28
-          script: yarn start:detox & yarn test:android -- --headless
+          script: cd BrightID; yarn start:detox & yarn test:android -- --headless; cd ..
