--- a/.github/workflows/detox.yml
+++ b/.github/workflows/detox.yml
@@ -49,4 +49,9 @@ jobs:
           arch: x86_64
           profile: Nexus 6
           avd-name: Pixel_2_XL_API_28
-          script: cd BrightID; yarn start:detox & yarn test:android -- --headless; cd ..
+          emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim -cores 2
+          script: |
+            cd BrightID
+            yarn start:detox &
+            yarn test:android
+            cd ..
